--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <title>Squid Game</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <a href="#"><img src="./images/407-4076977_transparent-netflix-logo-png-transparent-white-netflix-logo-removebg-preview.png" alt="logo" class="logo" width="150" height="60"></a>       
+            <ul class="nav-links">
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="#">Season 1</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Movies</a></li>
+                <li><a href="#">Top Series</a></li>
+                <li><a href="#">FAQ</a></li>
+            </ul>
+            <button type="button" id="btn">
+                <a href="#"><i class="fa fa-play" aria-hidden="true"></i>Watch Now</a>
+            </button>
+        </nav>
+    </header>
 </body>
 </html>
