--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./style.css">
     <title>Squid Game</title>
 </head>
@@ -24,5 +25,25 @@
             </button>
         </nav>
     </header>
+    
+    <!-- Content Wrapper -->
+    <section class="content-wrapper">
+        <div class="content-desc">
+            <h1>Squid Game <span>Season 2</span> <br> Launching Soon.
+            Don't miss out Top Series in 2023</h1>
+            <p>Stay Updated to get the Top Series on Netflix without any stress. Over 800M+ downloads across the globe. Don't miss out!!!</p>
+            <button type="button" id="btn-2">
+                <a href="#">Explore More</a><i class="fa fa-arrow-right"></i>
+            </button>
+        </div>
+        <!-- Rocket Icon -->
+        <div class="launch">
+            <i class="fa fa-rocket"></i>
+        </div>
+        <div class="hero-image">
+            <!-- Hero Image  -->
+        </div>
+    </section>
+
 </body>
 </html>
