--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
             <!-- Hero Image  -->
         </div>
     </section>
+    <!-- Section 2 Starts here -->
 
+    <section class="section-2">
+        <div class="squid-game"></div>
+    </section>
+    <div class="hero-image-2"></div>
 </body>
 </html>
