added auto text effect

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="content-desc">
             <h1>Squid Game <span>Season 2</span> <br> Launching Soon.
             Don't miss out Top Series in 2023</h1>
-            <p>Stay Updated to get the Top Series on Netflix without any stress. Over 800M+ downloads across the globe. Don't miss out!!!</p>
+            <p id="text"></p>
             <button type="button" id="btn-2">
                 <a href="#">Explore More</a><i class="fa fa-arrow-right"></i>
             </button>
@@ -50,5 +50,7 @@
         <div class="squid-game"></div>
     </section>
     <div class="hero-image-2"></div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
